# SwanLab-MCP

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README_zh.md  pyproject.toml
.github/workflows/: python-publish.yml
scripts/: commit-msg-check.sh  install-hooks.sh
skill/: README.md
skill/swanlab-api-skill/: SKILL.md
skill/swanlab-api-skill/scripts/: projects.py  runs.py  swanlab_cli.py  utils.py  workspaces.py
src/swanlab_mcp/: __init__.py  _version.py  cli.py  config.py  constants.py  models.py  server.py  utils.py
src/swanlab_mcp/meta/: info.py
src/swanlab_mcp/tools/: __init__.py  _normalize.py  experiment.py  metric.py  project.py  run.py  workspace.py
